--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.28.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.6",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
     "i18next": "^23.10.0",
